<resources>
    <string name="app_name">Psycho</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">Setting</string>
    <string name="Next">Next</string>
    <string name="title_activity_login">Pku-Eater</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_wrong">用户名或密码不正确</string>
    <string name="register_wrong">用户名已经被使用</string>
    <string name="input_plan">请输入您的健康目标</string>
    <string name="logout">登出</string>
    <string name="action_register">Register</string>
    <string name="healthslogn">保持你的健康计划，请随时查看哦！</string>
    <string name="the_bible">
        in principio creavit Deus caelum et terram\n
        terra autem erat inanis et vacua et tenebrae super faciem abyssi et spiritus Dei ferebatur super aquas\n
        dixitque Deus fiat lux et facta est lux\n
        et vidit Deus lucem quod esset bona et divisit lucem ac tenebras\n
        appellavitque lucem diem et tenebras noctem factumque est vespere et mane dies unus\n
        dixit quoque Deus fiat firmamentum in medio aquarum et dividat aquas ab aquis\n
        et fecit Deus firmamentum divisitque aquas quae erant sub firmamento ab his quae erant super firmamentum et factum est ita\n
        vocavitque Deus firmamentum caelum et factum est vespere et mane dies secundus\n
        dixit vero Deus congregentur aquae quae sub caelo sunt in locum unum et appareat arida factumque est ita\n
        et vocavit Deus aridam terram congregationesque aquarum appellavit maria et vidit Deus quod esset bonum\n
        et ait germinet terra herbam virentem et facientem semen et lignum pomiferum faciens fructum iuxta genus suum cuius semen in semet ipso sit super terram et factum est ita\n
        et protulit terra herbam virentem et adferentem semen iuxta genus suum lignumque faciens fructum et habens unumquodque sementem secundum speciem suam et vidit Deus quod esset bonum\n
        factumque est vespere et mane dies tertius\n
        dixit autem Deus fiant luminaria in firmamento caeli ut dividant diem ac noctem et sint in signa et tempora et dies et annos\n
        ut luceant in firmamento caeli et inluminent terram et factum est ita\n
        fecitque Deus duo magna luminaria luminare maius ut praeesset diei et luminare minus ut praeesset nocti et stellas\n
        et posuit eas in firmamento caeli ut lucerent super terram\n
        et praeessent diei ac nocti et dividerent lucem ac tenebras et vidit Deus quod esset bonum\n
        et factum est vespere et mane dies quartus\n
        dixit etiam Deus producant aquae reptile animae viventis et volatile super terram sub firmamento caeli\n
        creavitque Deus cete grandia et omnem animam viventem atque motabilem quam produxerant aquae in species suas et omne volatile secundum genus suum et vidit Deus quod esset bonum\n
        benedixitque eis dicens crescite et multiplicamini et replete aquas maris avesque multiplicentur super terram\n
        et factum est vespere et mane dies quintus\n
        dixit quoque Deus producat terra animam viventem in genere suo iumenta et reptilia et bestias terrae secundum species suas factumque est ita\n
        et fecit Deus bestias terrae iuxta species suas et iumenta et omne reptile terrae in genere suo et vidit Deus quod esset bonum\n
        et ait faciamus hominem ad imaginem et similitudinem nostram et praesit piscibus maris et volatilibus caeli et bestiis universaeque terrae omnique reptili quod movetur in terra\n
        et creavit Deus hominem ad imaginem suam ad imaginem Dei creavit illum masculum et feminam creavit eos\n
        benedixitque illis Deus et ait crescite et multiplicamini et replete terram et subicite eam et dominamini piscibus maris et volatilibus caeli et universis animantibus quae moventur super terram\n
        dixitque Deus ecce dedi vobis omnem herbam adferentem semen super terram et universa ligna quae habent in semet ipsis sementem generis sui ut sint vobis in escam\n
        et cunctis animantibus terrae omnique volucri caeli et universis quae moventur in terra et in quibus est anima vivens ut habeant ad vescendum et factum est ita\n
        viditque Deus cuncta quae fecit et erant valde bona et factum est vespere et mane dies sextus\n
    </string>
    <string-array name="canteen_array">
        <item>农园一层</item>
        <item>农园二层</item>
        <item>燕南一层</item>
        <item>家园一层</item>
        <item>家园二层</item>
        <item>家园三层</item>
        <item>家园四层</item>
        <item>松林包子</item>
        <item>学一食堂</item>
        <item>学五食堂</item>
        <item>勺园一层</item>
        <item>勺园二层</item>
        <item>佟园餐厅</item>
        <item>勺园西餐厅</item>
        <item>勺园中餐厅</item>
        <item>点外卖</item>
        <item>出校吃</item>
        <item>吃餐车</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="empty_logs">暂无饮食记录\n 请点击下方按钮记录三餐，完整记录三餐，分析才准确</string>

</resources>